# bgrm

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  bgrm-fp.sh  bgrm.sh  com.blueokiris.bgrm.json  pyproject.toml
bgrm/: __main__.py  bgrm.py  cam.py  requirements.txt  settings.py  vid_file.py  virt_cam.py
core/: Cargo.toml
core/src/: cam.rs  main.rs
mprs/: Cargo.toml
old-stuff/: bgrm-fp.sh  bgrm.sh
old_py/: bgrm.py  cam.py  requirements.txt  settings.py
scripts/: patch-v4l2-py-mod.sh  setup-venv.sh
src/: bgrm.rs  cam.rs  main.rs  settings.rs
