[package]
name = "bgrm"
version = "22.32.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.63.0"
clap = { version = "3.1.5", features = [ "cargo" ] }
pyo3 = "0.16.0"

[[bin]]
name = "bgrm"
path = "src/main.rs"
