[package]
name = "bgrm"
version = "22.411.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.63.0"
clap = { version = "3.1.5", features = [ "cargo" ] }
pyo3 = { version = "0.16.3", features = [ "auto-initialize", "extension-module" ] }
numpy = "0.16"

[[bin]]
name = "bgrm"
path = "src/main.rs"
