[tool.poetry]
name = "bgrm"
version = "10"
description = "Remove backgrounds from video feeds in your web cam applications."
authors = [ "Dylan Turner <dylantdmt@gmail.com>" ]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/blueOkiris/bgrm"
repository = "https://github.com/blueOkiris/bgrm"
keywords = [ "bgrm", "background", "removal", "teams", "linux", "mediapipe", "opencv", "bg", "rm" ]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "4.6.0.66"
mediapipe = "0.8.11"
cvzone = "1.5.3"
v4l2-python3 = "0.3.1"
protobuf = "3.19.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

